# NDKTest

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/hbck/ndktest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: VideoPlayer.cpp
app/src/main/java/com/hbck/ndktest/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/hbck/ndktest/: ExampleUnitTest.java
